--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -1,8 +1,11 @@
 {
   "bizCard": {
-    "department": "Solution Lab."
+    "department": "Solution Lab.",
+    "click": "Click me to open",
+    "touch": "Touch here to open"
   },
   "profile": {
-    "title": "Profile"
+    "title": "Profile",
+    "heading1": "Antecedentes"
   }
 }
