add some translation

--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -7,5 +7,12 @@
   "profile": {
     "title": "Profile",
     "heading1": "Antecedentes"
+  },
+  "aim": {
+    "title": "AI Composition System",
+    "heading1": "No Music that rings a bell",
+    "heading21": "Composition is",
+    "heading22": "Veeeeeeeeeeeeeeeery",
+    "heading23": "Difficult"
   }
 }
