--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -9,10 +9,11 @@
     "heading1": "Antecedentes"
   },
   "aim": {
+    "cardTitle": "Break the composer's chore!",
     "title": "AI Composition System",
-    "heading1": "No Music that rings a bell",
+    "heading1": "How to find CORRECT song?",
     "heading21": "Composition is",
-    "heading22": "Veeeeeeeeeeeeeeeery",
+    "heading22": "Veeeeeeeeeeeery",
     "heading23": "Difficult"
   }
 }
