--- a/src/i18n/ja_JP.json
+++ b/src/i18n/ja_JP.json
@@ -9,6 +9,7 @@
     "heading1": "経歴"
   },
   "aim": {
+    "cardTitle": "作曲家の雑務をふっとばす！",
     "title": "AI作曲システム",
     "heading1": "ピンと来る曲が見つからない",
     "heading21": "作曲は",
