--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -6,7 +6,12 @@
   },
   "profile": {
     "title": "Profile",
-    "heading1": "Antecedentes"
+    "heading1": "Antecedentes",
+    "desc001": "He entered the University's graduate school in 2020. He worked on the design and implementation of cloud systems and the development of iOS platforms.",
+    "desc002": "His research focuses primarily on autonomous decentralized mobile application platforms.",
+    "desc003": "After gaining middle and high school, he entered the Faculty of Environment and Information Studies at Keio University SFC in 2016. In the fall semester of the same year, he joined a laboratory to work on research on automatic composition by machine learning and broadened his development field from web applications to mobile applications.",
+    "desc004": "When he was in junior high school, he was attracted by the design of a MacBook Air at Bic Camera and started customizing Linux, developing tools, and contributing to OSS.",
+    "desc101": "During his sophomore year of college, he came up with the idea of launching and commercializing a new service. He planned, designed, and developed a live-streaming service specializing in street artists, but gave up the idea due to lack of funds."
   },
   "aim": {
     "cardTitle": "Break the composer's chore!",
