--- a/src/i18n/ja_JP.json
+++ b/src/i18n/ja_JP.json
@@ -6,7 +6,12 @@
   },
   "profile": {
     "title": "プロフィール",
-    "heading1": "経歴"
+    "heading1": "経歴",
+    "desc001": "2020年に同大学大学院に進学。クラウドシステムの設計・実装やiOSプラットフォームの開発に従事。",
+    "desc002": "研究では、主に自律分散型モバイルアプリケーションプラットフォームの研究に取り組んでいる。",
+    "desc003": "中高を得て2016年に慶應義塾大学SFC 環境情報学部に進学。同年秋学期に研究室に所属し機械学習による自動作曲の研究に取り組むとともに、Webアプリケーションからモバイルアプリケーションなど開発分野の手を広げる。",
+    "desc004": "中学生の時にビックカメラに置いてあったMacBook Airのデザインに惹かれLinuxのカスタマイズやツールの開発、OSSへのコントリビューションを始める。",
+    "desc101": "大学２年の時に新規サービスの立ち上げと事業化を思い立つ。路上アーティストに特化したライブ配信サービスを企画し、設計開発に取り組み起業するが資金不足で断念。"
   },
   "aim": {
     "cardTitle": "作曲家の雑務をふっとばす！",
